argo/order-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-app
  name: order-app
spec:
  ports:
    - name: 15000-tcp
      port: 15000
      protocol: TCP
      targetPort: 15000
  selector:
    app: order-app
  sessionAffinity: None
  type: ClusterIP
